--- a/landing_page/style.css
+++ b/landing_page/style.css
@@ -142,10 +142,13 @@ header {
         height: 75vh;
         min-height: 530px;
     }
+    .hero h1 {
+        font-size: 2.8rem;
+    }
 }
 
 .hero h1 {
-    font-size: 2rem;
+    font-size: 2.2rem;
     font-weight: 700;
 }
 
